<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel"
    tools:context=".DAM">

    <Button
        android:id="@+id/buttonSistemasInformaticos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonSistemasInformaticos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/buttonBaseDatosA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonBaseDatosA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/buttonBaseDatosB"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonBaseDatosB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/buttonProgramacionA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.240" />

    <Button
        android:id="@+id/buttonProgramacionB"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/buttonLenguajeMarcas"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonLenguajeMarcas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <Button
        android:id="@+id/buttonEntornosDesarrollo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonEntornosDesarrollo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <Button
        android:id="@+id/buttonAccesoDatos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonAccesoDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/buttonDesarrolloInterfaces"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonDesarrolloInterfaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/buttonProgramacionMultimedia"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionMultimedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/buttonProgramacionServicios"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionServicios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <Button
        android:id="@+id/buttonSistemasGestion"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonSistemasGestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/buttonFOL"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonFOL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.860" />

    <Button
        android:id="@+id/buttonEIE"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonEIE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.930" />

</android.support.constraint.ConstraintLayout>