<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel"
    tools:context=".DAW">


    <Button
        android:id="@+id/buttonSistemasInformaticos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonSistemasInformaticos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/buttonBaseDatosA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonBaseDatosA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/buttonBaseDatosB"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonBaseDatosB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/buttonProgramacionA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/buttonProgramacionB"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonProgramacionB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/buttonLenguajeMarcas"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonLenguajeMarcas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <Button
        android:id="@+id/buttonEntornosDesarrollo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonEntornosDesarrollo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/buttonDesarrolloWebCliente"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonDesarrolloWebCliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <Button
        android:id="@+id/buttonDesarrolloWebServidor"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonDesarrolloWebServidor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/buttonDespliegueAppWeb"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonDespliegueAppWeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <Button
        android:id="@+id/buttonDiseño"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonDiseño"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <Button
        android:id="@+id/buttonFOL"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonFOL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <Button
        android:id="@+id/buttonEIE"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonEIE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

</android.support.constraint.ConstraintLayout>