<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_asignaturas"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCursos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/buttonDAM"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:text="@string/buttonDAM"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/buttonDAW"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:text="@string/buttonDAW"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        style="?android:attr/borderlessButtonStyle" />

</android.support.constraint.ConstraintLayout>