<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel"
    tools:context="Asignaturas.ProgramacionA">

    <Button
        android:id="@+id/buttonUF1PA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonUF1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/buttonUF2PA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonUF2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/buttonUF3PA"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:text="@string/buttonUF3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

</android.support.constraint.ConstraintLayout>